--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -3,6 +3,7 @@
 
 @theme {
   --color-primary: #FECE04;
+  --color-secondary: #005daa;
   --color-light: #e7e7e7;
 
   --font-family: "Plus Jakarta Sans", sans-serif;
