--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -19,8 +19,12 @@
   margin-inline: auto;
   padding-inline: 2rem;
 }
+
+html,body{
+  scroll-behavior: smooth;
+}
 body {
   font-family: var(--font-family);
-  @apply text-gray-700;
+  @apply text-gray-700 overflow-x-hidden ;
 }
 
