--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -7,6 +7,7 @@
   --color-light: #e7e7e7;
 
   --font-family: "Plus Jakarta Sans", sans-serif;
+  --font-inter: "Inter", sans-serif;
   --font-weight-light: 200;
   --font-weight-regular: 400;
   --font-weight-bold: 700;
@@ -28,3 +29,21 @@ body {
   @apply text-gray-700 overflow-x-hidden ;
 }
 
+/* Untuk Webkit (Chrome, Edge, Safari) */
+.scrollbar-custom::-webkit-scrollbar {
+
+  @apply rounded-full w-3;
+}
+.scrollbar-custom::-webkit-scrollbar-thumb {
+  background-color: var(--color-secondary); /* ganti sesuai warna */
+ @apply rounded-full
+}
+.scrollbar-custom::-webkit-scrollbar-track {
+  background-color: #f0f0f0;
+}
+
+/* Firefox */
+.scrollbar-custom {
+  scrollbar-width: thin;
+  scrollbar-color: var(--color-secondary) #f0f0f0;
+}
